@@ -7015,6 +7015,8 @@ void PinTable::AddMultiSel(ISelect *psel, const bool add, const bool update, con
 #ifndef __STANDALONE__
         m_vpinball->SetStatusBarElementInfo(info);
         m_pcv->SelectItem(piSelect->GetIEditable()->GetScriptable());
+        // Update the layer dialog
+        m_vpinball->GetLayersListDialog()->UpdateLayerInfo();
 #endif
     }
 }
