@@ -5,6 +5,7 @@
 LayersListDialog::LayersListDialog()
    : CDialog(IDD_LAYERS)
    , m_collapsed(true)
+   , m_isCaseSensitive(false)
 {
    m_accel = LoadAccelerators(g_pvp->theInstance, MAKEINTRESOURCE(IDR_VPSIMPELACCEL));
 }
@@ -259,6 +260,11 @@ BOOL LayersListDialog::OnCommand(WPARAM wParam, LPARAM lParam)
    const int id = LOWORD(wParam);
    switch (id)
    {
+   case IDC_SYNC:
+   {
+      UpdateLayerInfo();
+      return TRUE;
+   }
    case IDC_ADD_LAYER_BUTTON:
    {
       if (!AddLayer("New Layer 0", nullptr))
@@ -409,6 +415,33 @@ bool LayersListDialog::PreTranslateMessage(MSG* msg)
 vector<string> LayersListDialog::GetAllLayerNames() 
 { 
     return m_layerTreeView.GetAllLayerNames();
+}
+
+// If SYNC checkbox is checked, the layer list will be updated
+void LayersListDialog::UpdateLayerInfo()
+{
+    // If active table is not set, return
+    if (m_activeTable == nullptr)
+        return;
+
+    // If Radio button IDC_SYNC is unchecked, return
+    if (IsDlgButtonChecked(IDC_SYNC) == BST_UNCHECKED)
+        return;
+
+    // Get the selected element
+    ISelect* const psel = m_activeTable->m_vmultisel.ElementAt(0);
+    if (psel != nullptr)
+    {
+        // Get the layer name of the selected element and Set the active layer
+        m_layerTreeView.SetActiveLayer(psel->m_layerName);
+        // Find the selected element name and find it in the layer, selecting it
+        const HTREEITEM item = m_layerTreeView.GetItemByElement(psel->GetIEditable());
+        m_layerTreeView.SelectItem(item);
+    }
+    else
+    {
+        m_layerTreeView.SetActiveLayer(string());
+    }
 }
 
 CContainLayers::CContainLayers()
