@@ -2375,6 +2375,7 @@ BEGIN
     EDITTEXT        IDC_LAYER_FILTER_EDIT,63,0,61,14,ES_AUTOHSCROLL
     LTEXT           "Filter",IDC_LAYER_FILTER_STATIC,45,3,16,8
     PUSHBUTTON      "E",IDC_EXPAND_COLLAPSE_BUTTON,21,0,16,15,BS_ICON
+    CONTROL         "Sync",IDC_SYNC,"Button",BS_AUTOCHECKBOX,0,21,31,10
 END
 
 IDD_NOTES_DIALOG DIALOGEX 0, 0, 161, 124
