@@ -7,7 +7,8 @@ FEATURES:
 
 - add "Surface" to the "Select Element" list
 
-- add additional tonemapper (the part of the rendering which handles the way overbright parts are displayed on non-HDR displays) 'Neutral' that keeps sRGB colors as authentic as possible and 'AgX' which is the default one used by Blender
+- add additional tonemapper (the part of the rendering which handles the way overbright parts are displayed on non-HDR displays) 'Neutral' that keeps sRGB colors as authentic as possible,
+  and the 'AgX' tonemapper which is the default one used by Blender
 - also add a new 'exposure' property that adjusts the overall scene exposure (like the corresponding camera control)
 
 FIXES:
@@ -236,6 +237,9 @@ FEATURES:
   Note that the VPX version used to play AND to convert must exactly match (incl. same revision/build, same OS, DXvsGL, 32vs64bit)
 
 - add/correct more data to the dimensions database
+
+- add 'Sync' button to the Layers dialog to allow for faster finding
+  when toggled on, the 'Sync' keeps the selected element in the main screen highlighted in the layer screen to allow for quicker usage within the dialog
 
 Additional docs explaining all these new features with images are provided in the docs folder of the project: https://github.com/vpinball/vpinball/tree/master/docs
 
